--- a/modelo_proy2.ipynb
+++ b/modelo_proy2.ipynb
@@ -569,7 +569,7 @@
     "        return 4\n",
     "\n",
     "def discretizar_oldpeak(oldpeak):\n",
-    "    if oldpeak\n",
+    "    if oldpeak_xd\n",
     "\n",
     "\n",
     "\n"
