codigo con inferencia

--- a/modelo_proy2.ipynb
+++ b/modelo_proy2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -152,7 +152,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
@@ -169,7 +169,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
@@ -186,7 +186,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
@@ -203,7 +203,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
@@ -220,7 +220,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -237,7 +237,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>298</th>\n",
+       "      <td>298</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -254,7 +254,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>299</th>\n",
+       "      <td>299</td>\n",
        "      <td>4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
@@ -271,7 +271,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>300</th>\n",
+       "      <td>300</td>\n",
        "      <td>3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
@@ -288,7 +288,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>301</th>\n",
+       "      <td>301</td>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
@@ -305,7 +305,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>302</th>\n",
+       "      <td>302</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
@@ -356,7 +356,7 @@
        "[303 rows x 14 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,9 +569,35 @@
     "        return 4\n",
     "\n",
     "def discretizar_oldpeak(oldpeak):\n",
-    "    if oldpeak\n",
-    "\n",
-    "\n",
+    "    if oldpeak<0.8:\n",
+    "        return 1\n",
+    "    elif oldpeak<1.6:\n",
+    "        return 2\n",
+    "    else:\n",
+    "        return 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.738295622688577, 0.26170437731142304]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def inference(evidence):\n",
+    "    infer=VariableElimination(model)\n",
+    "    prob=infer.query(variables=['num_discreta'], evidence=evidence)\n",
+    "    return prob.values.tolist()\n",
     "\n"
    ]
   }
@@ -592,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.7.4"
   },
   "orig_nbformat": 4
  },
