--- a/modelo_proy2.ipynb
+++ b/modelo_proy2.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "df = df.apply(pd.to_numeric, errors='coerce')    \n",
     "\n",
-    "print(df['age'].describe())# Valor máximo 77\n",
+    "#print(df['age'].describe())# Valor máximo 77\n",
     "#print(df['oldpeak'].describe())"
    ]
   },
@@ -386,7 +386,7 @@
     "\n",
     "#Eliminamos columnas sobrantes\n",
     "df.drop(['num', 'age_discreta', 'oldpeak_discreta'], axis=1, inplace=True)\n",
-    "df\n"
+    "#df\n"
    ]
   },
   {
